--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="refresh" content="url=https://extermin.github.io/public/index.php">
+    <meta http-equiv="refresh" content="1;url=https://extermin.github.io/public/index.php">
     <title>Site</title>
 </head>
 <body>
